Deploy VPS, playlist, file_size, controle remoto online, admin UI e docs

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,14 @@
-# Exemplo de arquivo .env para a Aplicação Cursor
-
-# Porta em que o servidor Node.js será executado
+# Porta do servidor
 PORT=3000
 
-# Diretório onde os arquivos PDF serão armazenados
-UPLOAD_DIR=./uploads
+# Na VPS: defina o domínio público para os links e QR do controle remoto ficarem corretos.
+# Sem isto, os links usam o endereço da página (também funciona se aceder sempre por https://slides...).
+BASE_URL=https://slides.filipeivopereira.com
 
-# Para futuras melhorias: Chave secreta para autenticação da interface /admin
-# ADMIN_SECRET_KEY=sua_chave_secreta_aqui
+# Supabase (obrigatório para upload e playlist)
+SUPABASE_URL=https://seu-projeto.supabase.co
+SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+SUPABASE_BUCKET=presentations
+
+# Opcional: diretório local de fallback (se não usar Supabase)
+# UPLOAD_DIR=./uploads
