--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "author": "Manus AI",
   "license": "MIT",
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "pdfjs-dist": "^5.4.624",
