Login, modo offline/backup, documentaÃ§Ã£o e ajustes
- Login: tela /login, sessÃ£o (express-session), rotas protegidas (/, /playlist, /admin)
- Modo offline: UPLOAD_DIR, POST /upload-local, Carregar PDF do computador no Apresentador
- BotÃ£o Sair: layout ajustado (sem sobreposiÃ§Ã£o) na pÃ¡gina inicial, Apresentador e Playlist
- Rotas: /favicon.ico e /.well-known (204), handler 404 com log
- DocumentaÃ§Ã£o: docs/README.md, README.md e docs/arquitetura.md atualizados (login, online/offline)
- Inclui: .github/workflows, docs/deploy-traefik-slides.md, docs/traefik-slides.yml

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
 # Porta do servidor
 PORT=3000
 
+# Login (obrigatório para aceder à página inicial, Playlist e Apresentador)
+LOGIN_USER=pastorfilipeivopereira
+LOGIN_PASSWORD=sua_palavra_passe
+SESSION_SECRET=uma_frase_secreta_longa_para_sessoes
+
 # Na VPS: defina o domínio público para os links e QR do controle remoto ficarem corretos.
 # Sem isto, os links usam o endereço da página (também funciona se aceder sempre por https://slides...).
 BASE_URL=https://slides.filipeivopereira.com
@@ -10,5 +15,6 @@ SUPABASE_URL=https://seu-projeto.supabase.co
 SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
 SUPABASE_BUCKET=presentations
 
-# Opcional: diretório local de fallback (se não usar Supabase)
+# Modo offline / backup: diretório local para PDFs carregados do computador (sem internet/Supabase).
+# Se definido, no Apresentador aparece "Carregar PDF do computador"; o PDF fica no servidor e a sincronização de slides continua pela rede local.
 # UPLOAD_DIR=./uploads
