--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@supabase/supabase-js": "^2.39.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.19.0",
     "multer": "^1.4.5-lts.1",
     "pdfjs-dist": "^5.4.624",
     "socket.io": "^4.7.4"
